[package]
name = "webgl2-glyph"
version = "0.1.0"
authors = ["Paul Butler <paulgb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.7.0", features = ["derive"] }
glyph_brush = "0.7.2"
js-sys = "0.3.51"
wasm-bindgen = "0.2.74"
web-sys = { version="0.3.51", features = [
  'console',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGl2RenderingContext',
  'WebGlVertexArrayObject',
  'WebGlUniformLocation',
  'WebGlProgram',
  'WebGlShader',
  'WebGlTexture',
  'WebGlSync',
  'Window',
] }
