[package]
name = "webgl2-glyph"
version = "0.1.2"
authors = ["Paul Butler <paulgb@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["webgl"]
readme = "README.md"
repository = "https://github.com/paulgb/webgl2-glyph/"
description = "WebGL2 text renderer, based on glyph_brush and ab_glyph (CPU rasterized glyph atlas)."

exclude = ["demos/*"]

[dependencies]
bytemuck = { version = "1.7.2", features = ["derive"] }
getrandom = { version = "0.2.3", features = ["js"] }
glyph_brush = "0.7.3"
js-sys = "0.3.51"
wasm-bindgen = "0.2.78"
web-sys = { version="0.3.55", features = [
  'console',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Performance',
  'WebGlBuffer',
  'WebGl2RenderingContext',
  'WebGlVertexArrayObject',
  'WebGlUniformLocation',
  'WebGlProgram',
  'WebGlShader',
  'WebGlTexture',
  'WebGlSync',
  'Window',
] }
