[package]
name = "dynamic"
version = "0.1.0"
authors = ["Paul Butler <paulgb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2.74"
web-sys = { version="0.3.51", features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'Performance',
] }
webgl2-glyph = { path="../../" }
